--- a/www/app/styles/main.scss
+++ b/www/app/styles/main.scss
@@ -3,15 +3,15 @@
 
 /* ----- LAYOUT / CUSTOM THEME ('cs') ----- */
 
-body{
-	overflow-x: hidden;
-}
-
 .page{
 	position: absolute;
     width: 100%;
     height: 100%;
+    top: 0;
     left: 100%;
+    overflow: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 
     @include transform(translate3d(0,0,0));
 
